--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   health: ^13.1.1
   permission_handler: ^11.0.1
   shimmer: ^3.0.0
+  uuid: ^4.1.0
+  firebase_core: ^2.30.0
 
 dev_dependencies:
   flutter_test:
