--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   uuid: ^4.1.0
   firebase_core: ^2.30.0
   firebase_database: ^10.4.0
+  syncfusion_flutter_calendar: ^30.1.42
+  firebase_auth: ^4.19.4 # 이 줄을 추가 (최신 버전)
 
 dev_dependencies:
   flutter_test:
@@ -42,3 +44,6 @@ flutter:
   assets:
     - assets/animations/
     - assets/images/  # 👈 이 줄을 추가해주세요! (앞에 띄어쓰기 2칸)
+dependency_overrides:
+  intl: ^0.20.2
+  timezone: ^0.10.0
