--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>610798691221-a5otuaqivnfv2vger1750a1avipi3hds.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.610798691221-a5otuaqivnfv2vger1750a1avipi3hds</string>
 	<key>API_KEY</key>
 	<string>AIzaSyA4mKmxT8ndTUEG4xyMrmKh-pRePS77db0</string>
 	<key>GCM_SENDER_ID</key>
