--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,5 @@
-platform :ios, '14.0' # 최소 버전 14 이상
+platform :ios, '16.0' # 최소 버전 14 이상
+$FirebaseSDKVersion = '10.25.0'
 
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -30,8 +31,11 @@ target 'Runner' do
   use_modular_headers!
 
   pod 'Firebase', :modular_headers => true
-  pod 'FirebaseDatabase', :modular_headers => true 
-  
+  pod 'Firebase/Core', '~> 10.25.0'
+  pod 'FirebaseDatabase', '~> 10.25.0' 
+  pod 'GoogleSignIn', '~> 8.0.0'
+  pod 'GoogleUtilities/UserDefaults', '~> 8.0.0'
+
   flutter_install_all_ios_pods(File.dirname(File.realpath(__FILE__)))
   
   target 'RunnerTests' do
