--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,24 +28,19 @@ dependencies:
   permission_handler: ^11.0.1
   shimmer: ^3.0.0
   uuid: ^4.1.0
-  firebase_core: ^2.30.0
-  firebase_database: ^10.4.0
+  supabase_flutter: ^1.10.25  # ✅ Supabase만 유지
   syncfusion_flutter_calendar: ^30.1.42
-  firebase_auth: ^4.19.4 # 이 줄을 추가 (최신 버전)
-  google_sign_in: ^6.2.1
-  sign_in_with_apple: ^5.0.0
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
   assets:
     - assets/animations/
-    - assets/images/  # 👈 이 줄을 추가해주세요! (앞에 띄어쓰기 2칸)
+    - assets/images/
+
 dependency_overrides:
   intl: ^0.20.2
   timezone: ^0.10.0
